# superposition-solver1

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  readme.md
.github/workflows/: ci-python.yml  ci-rust.yml
configs/: ensemble.yaml  gse.yaml  spike.yaml  stii.yaml
docs/: hif.md
examples/: gpt2_harness.py
notebooks/: 01_baseline_sae.ipynb  02_ensemble_intersection.ipynb  03_temporal_spikes_hypergraph.ipynb  04_stii_causal_extraction.ipynb  05_dashboard.ipynb
nsi-client/: README.md  pyproject.toml
nsi-client/ci/workflows/: python.yml
nsi-client/docs/: api.md  migration.md  user_guide.md
nsi-client/src/nsi_client/: __init__.py  config.py  facade.py
nsi-client/src/nsi_client/compat/: legacy_api.py
nsi-client/src/nsi_client/telemetry/: logging.py  tracing.py
nsi-client/src/nsi_client/viz/: hypergraph.md  spikes.md
nsi-engine/: Cargo.toml  README.md
nsi-engine/ci/workflows/: release.yml  rust.yml  security.yml
nsi-engine/contracts/proto/nsi/: dataset.proto  hypergraph.proto  interpretability.proto  metrics.proto  model.proto
nsi-engine/contracts/schemas/: artifact.json  tensor.json
nsi-engine/contracts/schemas/hif/: HIF-v0.json
nsi-engine/docs/: architecture.md  security.md
nsi-engine/sbom/: baseline.cdx.json
nsi-engine/service/src/: main.rs
nsi_core/: Cargo.toml
nsi_core/src/: encoding.rs  ensemble.rs  hypergraph.rs  lib.rs  metrics.rs
nsi_core/tests/: core_smoke.rs
py_nsi/: Cargo.toml  __init__.py  pyproject.toml  runlog.py
py_nsi/src/: lib.rs
tests/: test_import.py
(+6 files in other folders)
