[package]
name = "nsi_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core Rust library for ensemble encoders, temporal spiking, hypergraph construction, and metrics."

[dependencies]
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
