
[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "py_nsi"
version = "0.1.0"
description = "Python bindings for the nsi_core Rust library"
readme = "../readme.md"
requires-python = ">=3.9"
authors = [{ name = "Superposition Elimination Research Suite Contributors" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[tool.maturin]
module-name = "py_nsi.py_nsi"
python-source = "."
